unpackaged/main/default/objects/traa_Opportunity_Stage__mdt/traa_Opportunity_Stage__mdt.object-meta.xml
<CustomObject>
    <description>This metadata table would hold data to identify Opportunity Stage that will count as &quot;Enrolled&quot;.</description>
    <label>Opportunity Stage</label>
    <pluralLabel>Opportunity Stages</pluralLabel>
</CustomObject>