unpackaged/main/default/objects/traa_Opportunity_Stage__mdt/fields/Opp_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage_Name__c</fullName>
    <description>Stage name of the Opportunity</description>
    <inlineHelpText>Stage Name of the Opportunity</inlineHelpText>
    <label>Opp Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>