unpackaged/main/default/objects/traa_Opportunity_Stage__mdt/fields/traa_Count_as_Applicant__c.field-meta.xml
<CustomField>
    <fullName>traa_Count_as_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Count as Applicant</label>
    <type>Checkbox</type>
</CustomField>