unpackaged/main/default/objects/traa_Opportunity_Stage__mdt/fields/traa_Count_as_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>traa_Count_as_Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, then count stage as enrolled otherwise not.</description>
    <label>Count as Enrolled?</label>
    <type>Checkbox</type>
</CustomField>