unpackaged/main/default/objects/traa_Opportunity_Stage__mdt/fields/traa_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>traa_Stage_Name__c</fullName>
    <description>Stage Name of Opportunity</description>
    <inlineHelpText>Stage Name of Opportunity</inlineHelpText>
    <label>Stage Name (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry</fullName>
                <default>true</default>
                <label>Inquiry</label>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Admissions Review</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>